--- a/EasyShareApp/Properties/launchSettings.json
+++ b/EasyShareApp/Properties/launchSettings.json
@@ -12,7 +12,8 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_DETAILEDERRORS": "1",
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     },
     "EasyShareApp": {
@@ -21,7 +22,15 @@
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "EasyShareAppProd": {
+        "commandName": "Project",
+        "launchBrowser": true,
+        "applicationUrl": "https://easy-share-app.herokuapp.com",
+        "environmentVariables": {
+          "ASPNETCORE_DETAILEDERRORS": "1",
+          "ASPNETCORE_ENVIRONMENT": "Production"
+        }
       }
     }
-  }
 }
