--- a/EasyShareApp/EasyShareApp.csproj
+++ b/EasyShareApp/EasyShareApp.csproj
@@ -14,6 +14,7 @@
     <None Remove="Models\ViewModels\" />
     <None Remove="Views\Share\" />
     <None Remove="Microsoft.EntityFrameworkCore.Tools" />
+    <None Remove="Microsoft.AspNetCore.Routing" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.0.0" />
@@ -21,6 +22,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.Routing" Version="2.2.2" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\images\" />
