--- a/EasyShareApp/appsettings.json
+++ b/EasyShareApp/appsettings.json
@@ -12,6 +12,6 @@
     //"DatabaseContext": "server=localhost;database=easyshare;user=root;password=root;port=8889"
     //"DatabaseContext": "server=localhost;database=easyshare;user=root;password=;port=3306"
     //CLEARDB_DATABASE_URL: mysql://bf74caefbf3b42:8bd994f0@us-cdbr-east-04.cleardb.com/heroku_b5fcb6e5595165d?reconnect=true
-    "DatabaseContext": "server=us-cdbr-east-04.cleardb.com;database=heroku_b5fcb6e5595165d;user=bf74caefbf3b42;password=8bd994f0"
+    "DatabaseContext": "server=us-cdbr-east-04.cleardb.com;database=heroku_b5fcb6e5595165d;user=bf74caefbf3b42;password=8bd994f0;port=3306;SslMode=None"
   }
 }
