--- a/EasyShareApp/appsettings.json
+++ b/EasyShareApp/appsettings.json
@@ -10,8 +10,8 @@
   //"Environment": "Local",
   "ConnectionStrings": {
     //"DatabaseContext": "server=localhost;database=easyshare;user=root;password=root;port=8889"
-    //"DatabaseContext": "server=localhost;database=easyshare;user=root;password=;port=3306"
-    //CLEARDB_DATABASE_URL: mysql://bf74caefbf3b42:8bd994f0@us-cdbr-east-04.cleardb.com/heroku_b5fcb6e5595165d?reconnect=true
-    "DatabaseContext": "server=us-cdbr-east-04.cleardb.com;database=heroku_b5fcb6e5595165d;user=bf74caefbf3b42;password=8bd994f0;port=3306;SslMode=None"
+    "DatabaseContext": "server=localhost;database=easyshare;user=root;password=;port=3306"
+    //CLEARDB_DATABASE_URL: mysql://b8a5cac91f2be9:6bfecffb@us-cdbr-east-04.cleardb.com/heroku_445d9f9a06567ae?reconnect=true
+    //"DatabaseContext": "server=us-cdbr-east-04.cleardb.com;database=heroku_445d9f9a06567ae;user=b8a5cac91f2be9;password=6bfecffb;port=3306;SslMode=None"
   }
 }
