--- a/EasyShareApp/Properties/launchSettings.json
+++ b/EasyShareApp/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_DETAILEDERRORS": "1",
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     },
     "EasyShareApp": {
