alterando instancia do BD

--- a/EasyShareApp/appsettings.json
+++ b/EasyShareApp/appsettings.json
@@ -11,7 +11,7 @@
   "ConnectionStrings": {
     //"DatabaseContext": "server=localhost;database=easyshare;user=root;password=root;port=8889"
     //"DatabaseContext": "server=localhost;database=easyshare;user=root;password=;port=3306"
-    //CLEARDB_DATABASE_URL: mysql://b8a5cac91f2be9:6bfecffb@us-cdbr-east-04.cleardb.com/heroku_445d9f9a06567ae?reconnect=true
-    "DatabaseContext": "server=us-cdbr-east-04.cleardb.com;database=heroku_445d9f9a06567ae;user=b8a5cac91f2be9;password=6bfecffb;port=3306;SslMode=None"
+    //CLEARDB_DATABASE_URL: mysql://b6fc4931b379bc:85784645@us-cdbr-east-05.cleardb.net/heroku_2e0da2eb223af09?reconnect=true
+    "DatabaseContext": "server=us-cdbr-east-05.cleardb.net;database=heroku_2e0da2eb223af09;user=b6fc4931b379bc;password=85784645;port=3306;SslMode=None"
   }
 }
